# COMP-SCI-7317-Using-Machine-Learning-Tools

./: README.md  pyproject.toml
assignment1/: A1.ipynb  CleanedSeoulBikeData.csv  a1766121-comp-sci-7317-umlt-assignment1.ipynb
workshop1/: Workshop_1.ipynb
workshop2/: Workshop2_Student.ipynb
workshop4/: workshop04_Student.ipynb
workshop6/: workshop06_Student.ipynb  workshop06_withvisuals.ipynb
