[project]
name = "comp-sci-7317-using-machine-learning-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "keras>=3.10.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
]
